--- a/style.css
+++ b/style.css
@@ -17,6 +17,12 @@ body {
   padding: 0 16px;
 }
 
+themes {
+  border:  1px solid #000000;
+  padding:  10px;
+  border-radius: 10%; 
+}
+
 .page-header {
   margin: 0 0 160px;
   padding: 32px 0 32px;
